Make DuckDB and Snowflake query client configs part of `server-config.json` (#1452)